syntax = "proto3";

package hvxahv.v1alpha1.proto;
option go_package = "github.com/disism/hvxahv/api/hvxahv/v1alpha1/v1alpha1";

// ActivityPub List of account gRPC service.
service ActivityPub {
  // NewAccount Create an account through the NewAccountData data structure.
  rpc NewAccount (NewAccountData) returns (AccountsReply) {}
  // UpdateAccount Update the account through AccountData data.
  rpc UpdateAccount (AccountData) returns (AccountsReply) {}
  // DeleteAccount Delete the specified account by user name.
  rpc DeleteAccount (AccountByName) returns (AccountsReply) {}
  // FindAccount Query specified user data by user name.
  rpc FindAccount (AccountByName) returns (AccountData) {}
  rpc LoginAccount (LoginData) returns (LoginReply) {}
}


// AccountsData List of all data of the account service
message AccountData {
  string Uuid       = 1;
  string Username   = 2;
  string Password   = 3;
  string Mail       = 4;
  string Avatar     = 5;
  string Bio        = 6;
  string Name       = 7;
  string Phone      = 8;
  int32  Private    = 9;
  string PrivateKey = 10;
  string PublicKey  = 11;
}

// AccountsReply The return value, code and message of the Accounts operation.
message AccountsReply {
  int32  Code    = 1;
  string Message = 2;
}

// AccountByName Functions operated by username.
message AccountByName{
  string Username = 1;
}

// NewAccountData Data needed to create a new account.
message NewAccountData {
  string Username   = 1;
  string Password   = 2;
  string Mail       = 3;
}

// LoginData Account login, use email and password.
message LoginData {
  string Mail     = 1;
  string Password = 2;
}

// LoginReply The data returned by the login account needs to return a token.
message LoginReply {
  string Username = 1;
  string Uuid     = 2;
}