syntax = "proto3";

package hvxahv.v1alpha1.proto;
option go_package = "github.com/hvxahv/hvx/api/proto/account/v1alpha";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";

service Actor {
  rpc CreateActor(CreateActorRequest) returns (CreateActorResponse) {}
  // GetActorsByPreferredUsername Returns the set of actors by the
  // specified GetActorsByPreferredUsername by PreferredUsername.
  rpc GetActorsByPreferredUsername (GetActorsByPreferredUsernameRequest) returns (GetActorsByPreferredUsernameResponse) {
    option (google.api.http) = {
      get: "/api/v1/search/{preferred_username}"
    };
  }

  // GetActorByAddress Returns the actor identified by the specified address.
  rpc GetActorByAddress (GetActorByAddressRequest) returns (ActorDataResponse) {}
  // EditActor Edit the actor's profile and view the structure to get
  // the allowed and changeable parameters.
  // By username.
  rpc EditActor (EditActorRequest) returns (EditActorResponse) {}
}

message CreateActorRequest {
  string preferred_username = 1;
  string public_key = 2;
  string actor_type = 3;
}

message CreateActorResponse {
  string code = 1;
  string actor_id = 2;
}

message ActorDataResponse {
  string id = 1;
  string preferred_username = 2;
  string domain = 3;
  string avatar = 4;
  string name = 5;
  string summary = 6;
  string inbox = 7;
  string address = 8;
  string public_key = 9;
  string actor_type = 10;
  string is_remote = 11;
}

message GetActorsByPreferredUsernameRequest {
  string preferred_username = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetActorsByPreferredUsernameResponse {
  string code = 1;
  repeated ActorDataResponse actors = 2;
}

message GetActorByAddressRequest {
  string address = 1;
}

message EditActorRequest {
  string AccountUsername = 1;
  string name = 2;
  string avatar = 3;
  string summary = 4;
}

message EditActorResponse {
  string code = 1;
  string reply = 2;
}

